--- a/about-page.html
+++ b/about-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>About page</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -8,14 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
-  <title>Antrea Antoniou</title>
-
-  <!-- ADD BOOTSTRAP CORE HERE!!!! -->
+  <!-- BOOTSTRAP -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-  <!-- Custom styles for this template -->
-  <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body background="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/photo.jpg?raw=true">
@@ -26,10 +20,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="example.html">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="about-page.html">About me<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
@@ -37,53 +31,59 @@
         </li>
       </ul>
     </div>
-    <h1>Antrea Antoniou</h1>
   </nav>
 
+  <!-- Banner -->
   <div class="sandbox sandbox-correct-pronounciation">
     <h5 class="heading heading-correct-pronounciation">
       <em>Antrea Antoniou</em>
-     Artist - Arhcitect
-    </h1>
+      Artist
+    </h5>
   </div>
-  
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">Message Sent</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Thanks!
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <main class="w-50 text-center">
     <div>
       <p><br><br>Hello, my name is Antrea and I am an artist involved in many fields. My enthusiasm towards drawing, progression and interesting compositions has led me to discover my passion for art.
-      Through the initial research phase of every project, I embark upon a quest to find the often overlooked detail that will trigger my curiosity to develop my scheme in an unorthodox way. Spotting patterns in nature inspires me to experiment and gradually spark the concept idea.
-      As an artist I create with an abstract vision. I am not aiming to represent the actual subject in my final design. Being free to consider the elements independently of their associations of attributes during the development process, naturally allows the emergence of new ideas that elevate the concept to the next level. The uncertainty of what the final product will be is what engages my interest the most and keeps me excited throughout the course of every project.
-      On my website you can find my past and recent collections of artwork, and you can purchase your most loved art pieces.</p>
-      <p>Learn more about me by signing up below!</p>
-    </div>
-    <input type="email" placeholder="Your email">
-
-    <a href="#" class="btn btn-lg btn-success" data-toggle="modal" data-target="#basicModal">
-      Click to open Modal
-    </a>
-
-    <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">Basic Modal </h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
+        Through the initial research phase of every project, I embark upon a quest to find the often overlooked detail that will trigger my curiosity to develop my scheme in an unorthodox way. Spotting patterns in nature inspires me to experiment and gradually spark the concept idea.
+        As an artist I create with an abstract vision. I am not aiming to represent the actual subject in my final design. Being free to consider the elements independently of their associations of attributes during the development process, naturally allows the emergence of new ideas that elevate the concept to the next level. The uncertainty of what the final product will be is what engages my interest the most and keeps me excited throughout the course of every project.
+        On my website you can find my past and recent collections of artwork, and you can purchase your most loved art pieces.</p>
+        <p>Learn more about me by signing up below!</p>
       </div>
-      <div class="modal-body">
-        <h3>Modal Body</h3>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+      <input type="email" placeholder="Your email">
 
-    <p>Or follow me on social media.</p>
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-instagram"></a>
-  </main>
-</body>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+        Click for copyright information
+      </button>
+
+      <p>Or follow me on social media.</p>
+      <a href="http://www.facebook.com">
+        <img src="https://image.flaticon.com/icons/svg/145/145802.svg" width="50">
+      </a>
+      <a href="http://www.twitter.com">
+        <img src="https://image.flaticon.com/icons/svg/145/145812.svg" width="50">
+      </a>
+      <a href="http://instagram.com">
+        <img src="https://image.flaticon.com/icons/svg/145/145805.svg" width="50">
+      </a>
+    </main>
+  </body>
