--- a/about-page.html
+++ b/about-page.html
@@ -42,11 +42,11 @@
   </div>
 
   <!-- Modal -->
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalCenterTitle">Message Sent</h5>
+          <h5 class="modal-title" id="exampleModalCenterTitle1">Message Sent</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -70,20 +70,25 @@
         <p>Learn more about me by signing up below!</p>
       </div>
       <input type="email" placeholder="Your email">
-
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-        Click for copyright information
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter1">
+        Submit
       </button>
-
       <p>Or follow me on social media.</p>
       <a href="http://www.facebook.com">
-        <img src="https://image.flaticon.com/icons/svg/145/145802.svg" width="50">
+        <img class="socialButtons" src="https://image.flaticon.com/icons/svg/145/145802.svg" width="50">
       </a>
       <a href="http://www.twitter.com">
-        <img src="https://image.flaticon.com/icons/svg/145/145812.svg" width="50">
+        <img class="socialButtons" src="https://image.flaticon.com/icons/svg/145/145812.svg" width="50">
       </a>
       <a href="http://instagram.com">
-        <img src="https://image.flaticon.com/icons/svg/145/145805.svg" width="50">
+        <img class="socialButtons" src="https://image.flaticon.com/icons/svg/145/145805.svg" width="50">
       </a>
     </main>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
+    <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+
   </body>
+</html>
